@startuml

title __PUZZLEDROID's Class Diagram__\n

  namespace com.ultimapieza.puzzledroid {
    class com.ultimapieza.puzzledroid.GalleryActivity {
        ~ numOfPieces : int
        ~ score : int
        # onCreate()
    }
  }
  

  namespace com.ultimapieza.puzzledroid {
    class com.ultimapieza.puzzledroid.HelpActivity {
        - webView : WebView
        + onBackPressed()
        # onCreate()
    }
  }
  

  namespace com.ultimapieza.puzzledroid {
    class com.ultimapieza.puzzledroid.ImageAdapter {
        - am : AssetManager
        - files : String[]
        - mContext : Context
        + ImageAdapter()
        + getCount()
        + getItem()
        + getItemId()
        + getView()
        - getPicFromAsset()
    }
  }
  

  namespace com.ultimapieza.puzzledroid {
    class com.ultimapieza.puzzledroid.InfoActivity {
        # onCreate()
    }
  }
  

  namespace com.ultimapieza.puzzledroid {
    class com.ultimapieza.puzzledroid.LoginActivity {
        + txtPlayerInput : EditText
        - score : int
        - txtStartGame : Button
        + GetInputName()
        # onCreate()
        - clean()
    }
  }
  

  namespace com.ultimapieza.puzzledroid {
    class com.ultimapieza.puzzledroid.MainActivity {
        + reproductor : MediaPlayer
        - webView : WebView
        + onCreateOptionsMenu()
        + onOptionsItemSelected()
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
    }
  }
  

  namespace com.ultimapieza.puzzledroid {
    class com.ultimapieza.puzzledroid.PlayActivity {
        ~ imageView : ImageView
        ~ numOfPieces : int
        ~ score : int
        {static} - COLUMNS : int
        {static} - DIMENSIONS : int
        {static} - SELECT_PHOTO : int
        - tileList : String[]
        + openCamera()
        # onActivityResult()
        # onCreate()
        - display()
        - init()
        - scramble()
    }
  }
  

  namespace com.ultimapieza.puzzledroid {
    class com.ultimapieza.puzzledroid.Player {
        - name : String
        - score : int
        + getName()
        + getScore()
        + setName()
        + setScore()
    }
  }
  

  namespace com.ultimapieza.puzzledroid {
    class com.ultimapieza.puzzledroid.PuzzleActivity {
        ~ numOfPieces : int
        ~ pieces : ArrayList<PuzzlePiece>
        ~ rows : int
        ~ time : Double
        ~ timer : Timer
        ~ timerTask : TimerTask
        - score : int
        + checkGameOver()
        + getScore()
        # onCreate()
        - getBitmapPositionInsideImageView()
        - getTime()
        - isGameOver()
        - setPicFromAsset()
        - splitImage()
        - startTimer()
    }
  }
  

  namespace com.ultimapieza.puzzledroid {
    class com.ultimapieza.puzzledroid.PuzzlePiece {
        + canMove : boolean
        + pieceHeight : int
        + pieceWidth : int
        + xCoord : int
        + yCoord : int
        + PuzzlePiece()
    }
  }
  

  namespace com.ultimapieza.puzzledroid {
    class com.ultimapieza.puzzledroid.ResultActivity {
        ~ numOfPieces : int
        ~ score : int
        + playAgain()
        # onCreate()
    }
  }
  

  namespace com.ultimapieza.puzzledroid {
    class com.ultimapieza.puzzledroid.ScoreActivity {
        # onCreate()
    }
  }
  

  namespace com.ultimapieza.puzzledroid {
    class com.ultimapieza.puzzledroid.SettingsActivity {
        ~ preferences : SharedPreferences
        ~ stateSwitch1 : boolean
        ~ stateSwitch2 : boolean
        ~ switch1 : Switch
        ~ switch2 : Switch
        # onCreate()
    }
  }
  

  namespace com.ultimapieza.puzzledroid {
    class com.ultimapieza.puzzledroid.TouchListener {
        - xDelta : float
        - yDelta : float
        + TouchListener()
        + onTouch()
        + sendViewToBack()
    }
  }
  

  namespace com.ultimapieza.puzzledroid {
    class com.ultimapieza.puzzledroid.songsActivity {
    }
  }
  

  com.ultimapieza.puzzledroid.GalleryActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.ultimapieza.puzzledroid.HelpActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.ultimapieza.puzzledroid.ImageAdapter -up-|> android.widget.BaseAdapter
  com.ultimapieza.puzzledroid.InfoActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.ultimapieza.puzzledroid.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.ultimapieza.puzzledroid.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.ultimapieza.puzzledroid.PlayActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.ultimapieza.puzzledroid.PuzzleActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.ultimapieza.puzzledroid.PuzzlePiece -up-|> androidx.appcompat.widget.AppCompatImageView
  com.ultimapieza.puzzledroid.ResultActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.ultimapieza.puzzledroid.ScoreActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.ultimapieza.puzzledroid.SettingsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.ultimapieza.puzzledroid.TouchListener .up.|> android.view.View.OnTouchListener
  com.ultimapieza.puzzledroid.TouchListener o-- com.ultimapieza.puzzledroid.PuzzleActivity : activity
  com.ultimapieza.puzzledroid.songsActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
